# physics_models

./: .gitignore
inflationary-sector-renormalization/: README.md  pyproject.toml  requirements.txt  run_all.py
inflationary-sector-renormalization/configs/: base.yaml  kernels.yaml  landscapes.yaml
inflationary-sector-renormalization/docs/: bell_locality_note.md  configuration_space_locality_note.md  paper_outline.md  simulation_design.md  theory.md
inflationary-sector-renormalization/experiments/: 01_global_census_baseline.py  02_locality_weighted_measure.py  03_cutoff_stability.py  04_kernel_sensitivity.py  05_basin_boundary_test.py  06_bell_locality_diagnostic.py  06_configuration_space_locality_diagnostic.py  07_effective_action_coefficients.py  07_kernel_weighted_sector_averaging.py  08_stress_test.py  09_ell_sensitivity.py  10_sigma_ell_boundary.py  11_flat_parent_composition.py  12_landscape_perturbation.py  run_all.py
inflationary-sector-renormalization/isr/: __init__.py  bell_locality.py  config.py  configuration_space_locality.py  diagnostics.py  experiment_utils.py  kernels.py  landscape.py  measures.py  plotting.py  renormalization.py  sector.py  stochastic_dynamics.py
inflationary-sector-renormalization/outputs/: basin_boundary_diagnostics.json  basin_boundary_metrics.csv  bell_locality_diagnostics.json  bell_locality_summary.csv  ell_sensitivity_results.csv  ell_sensitivity_summary.json  global_cutoff_stability.json  global_measure_drift.csv  global_measure_vs_cutoff.json  isr_measure_vs_cutoff.json  isr_result_summary.md  kernel_comparison_table.csv  (+21 more)
(+28 files in other folders)
